# xs-examination

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/student/src-tauri/: .env  Cargo.toml  tauri.conf.json
apps/student/src-tauri/migrations/: 0001_initial.sql  0002_create_exam_sessions.sql  0003_create_exam_snapshots.sql  0004_create_local_answers.sql  0005_create_sync_outbox.sql  0006_create_runtime_kv.sql  0007_create_teacher_endpoints.sql  0008_create_exam_question_assets.sql  0009_add_exam_snapshot_asset_sync_columns.sql  0010_add_exam_snapshot_package_columns.sql
apps/student/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
apps/student/src-tauri/src/controllers/: device_controller.rs  file_asset_controller.rs  mod.rs
apps/student/src-tauri/src/db/: mod.rs  models.rs
apps/student/src-tauri/src/network/: control_server.rs  device_network.rs  discovery_listener.rs  mod.rs  p2p_client.rs  protocol.rs  ws_client.rs
apps/student/src-tauri/src/repos/: exam_session_repo.rs  exam_snapshot_repo.rs  local_answer_repo.rs  mod.rs  sync_outbox_repo.rs  teacher_endpoint_repo.rs
apps/student/src-tauri/src/schemas/: control_protocol.rs  device_schema.rs  exam_runtime_schema.rs  file_asset_schema.rs  mod.rs  protocol.rs  teacher_endpoint_schema.rs
apps/student/src-tauri/src/services/: device_service.rs  exam_runtime_service.rs  file_asset_service.rs  mod.rs  teacher_endpoints_service.rs  ws_reconnect_service.rs
apps/student/src-tauri/src/utils/: datetime.rs  mod.rs  p2p_chunker.rs
apps/teacher/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
apps/teacher/src-tauri/migrations/: 0001_initial.sql  0002_split_students.sql  0003_create_devices.sql  0004_add_answer_progress.sql  0005_rebuild_legacy_student_foreign_keys.sql  0006_answer_sheets_unique_by_student_exam.sql  0007_create_question_bank_items.sql  0008_add_questions_content_image_paths.sql
apps/teacher/src-tauri/src/: config.rs  crypto.rs  lib.rs  main.rs  state.rs
apps/teacher/src-tauri/src/commands/: exam.rs
apps/teacher/src-tauri/src/controllers/: device_controller.rs  exam_controller.rs  file_asset_controller.rs  mod.rs  network_controller.rs  question_bank_controller.rs  question_controller.rs  student_controller.rs  student_exam_controller.rs
apps/teacher/src-tauri/src/core/: setting.rs
apps/teacher/src-tauri/src/db/: mod.rs  models.rs
apps/teacher/src-tauri/src/models/: device.rs  exam.rs  mod.rs  question.rs  question_bank_item.rs  student.rs  student_exam.rs
apps/teacher/src-tauri/src/network/: mdns.rs  mod.rs  p2p_distributor.rs  protocol.rs  student_control_client.rs  ws_server.rs
apps/teacher/src-tauri/src/repos/: device_repo.rs  exam_repo.rs  mod.rs  question_bank_repo.rs  question_repo.rs  student_exam_repo.rs  student_repo.rs
apps/teacher/src-tauri/src/schemas/: device_schema.rs  file_asset_schema.rs  mod.rs  question_bank_schema.rs  question_schema.rs  student_exam_schema.rs
apps/teacher/src-tauri/src/services/: device_service.rs  exam_service.rs  file_asset_service.rs  mod.rs  question_bank_service.rs  question_service.rs  student_exam_service.rs  student_service.rs
apps/teacher/src-tauri/src/utils/: asset_zip.rs  env.rs  image_asset.rs  lan_discovery.rs  (+1 more)
(+136 files in other folders)
