[package]
name = "teacher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio-tungstenite = "0.24"
axum = "0.8"
mdns-sd = "0.13"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
calamine = "0.26"
thiserror = "2"
anyhow = "1"
dashmap = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]