[package]
name = "teacher"
version = "0.1.0"
edition = "2021"

[lib]
name = "teacher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "2.0.0-rc.36", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = "0.8"
mdns-sd = "0.13"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
calamine = "0.26"
thiserror = "2"
anyhow = "1"
dashmap = "6"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
once_cell = "1.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
